public/ACM/css/ACM.css
/* Styling for whole html */
html {
	scroll-behavior: smooth;
	box-sizing: border-box;
}

/* Styling for body */
body {
	transition: 0.2s;
	box-sizing: border-box;
}

body,
html {
	height: 100%;
	margin: 0;
	display: block;
}

/* Styling for footer */
footer {
	background-color: gainsboro;
}

footer a {
	color: #595959;
}

/* Styling for navbar */
.navbar.scrolled {
	background-color: #1b80ce;
}
.navbar {
	background-color: rgba(27, 128, 206, 0);
	-webkit-transition: all 0.6s ease-out;
	-moz-transition: all 0.6s ease-out;
	-o-transition: all 0.6s ease-out;
	-ms-transition: all 0.6s ease-out;
	transition: all 0.6s ease-out;
}
.navbar-collapse {
	display: flex;
	justify-content: flex-end;
}

.nav-link {
	font-size: 1.1rem;
}

/* Styling for hero */
.hero {
	width: inherit;
	height: inherit;
	color: rgba(0, 0, 0, 0.6);
	background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
}
#home {
	background-image: url("/ACM/img/ASEB.jpg");
	background-size: cover;
	background-repeat: no-repeat;
}

/* Styling for all the paragraghs */
p {
	font-size: 1.2rem;
	color: #595959;
}

/* Styling for all the cards */
.card {
	/* transition: transform 0.2s; */
	border: none;
}

/* Styling for Gallery Indicator */
.gal img {
	width: 100%;
	height: auto;
	margin-bottom: 20px;
}

.motto-box {
	height: 600px;
}

.motto-text {
	font-weight: 600;
}

/* Styling for Scroll Indicator */
.demo {
	width: 100%;
}
.demo a {
	z-index: 2;
	display: inline-block;
	transform: translate(0, -50%);
	transition: opacity 0.3s;
}
.demo a:hover {
	opacity: 0.5;
}

#section04 a {
	padding-top: 60px;
}
#section04 a span {
	position: absolute;
	width: 24px;
	height: 24px;
	border-left: 3px solid #fff;
	border-bottom: 3px solid #fff;
	transform: rotate(-45deg);
	animation: sdb04 2s infinite;
	box-sizing: border-box;
}
@-webkit-keyframes sdb04 {
	0% {
		-webkit-transform: rotate(-45deg) translate(0, 0);
		transform: rotate(-45deg) translate(0, 0);
	}
	20% {
		-webkit-transform: rotate(-45deg) translate(-10px, 10px);
		transform: rotate(-45deg) translate(-10px, 10px);
	}
	40% {
		-webkit-transform: rotate(-45deg) translate(0, 0);
		transform: rotate(-45deg) translate(0, 0);
	}
}
@-moz-keyframes sdb04 {
	0% {
		-moz-transform: rotate(-45deg) translate(0, 0);
		transform: rotate(-45deg) translate(0, 0);
	}
	20% {
		-moz-transform: rotate(-45deg) translate(-10px, 10px);
		transform: rotate(-45deg) translate(-10px, 10px);
	}
	40% {
		-moz-transform: rotate(-45deg) translate(0, 0);
		transform: rotate(-45deg) translate(0, 0);
	}
}
@-o-keyframes sdb04 {
	0% {
		-o-transform: rotate(-45deg) translate(0, 0);
		transform: rotate(-45deg) translate(0, 0);
	}
	20% {
		-o-transform: rotate(-45deg) translate(-10px, 10px);
		transform: rotate(-45deg) translate(-10px, 10px);
	}
	40% {
		-o-transform: rotate(-45deg) translate(0, 0);
		transform: rotate(-45deg) translate(0, 0);
	}
}
@keyframes sdb04 {
	0% {
		transform: rotate(-45deg) translate(0, 0);
	}
	20% {
		transform: rotate(-45deg) translate(-10px, 10px);
	}
	40% {
		transform: rotate(-45deg) translate(0, 0);
	}
}

#sig {
	/* width:100%; */
	height: 500%;
}

#sig .pimg0,
.pimg1,
.pimg2,
.pimg3,
.pimg4 {
	position: relative;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;

	/*
	  fixed = parallax
	  scroll = normal
	*/
	background-attachment: fixed;
}

.img-placeholder{
	width: 100%;
	margin: 0 auto;
	display: flex;
	align-items: center;	
}

.card-text {
	text-align: justify;
}

#sig .pimg0 {
	height: 20%;
}

#sig .pimg1 {
	height: 20%;
}

#sig .pimg2 {
	background-image: url("/ACM/img/Csig.png");
	height: 20%;
}

#sig .pimg3 {
	background-image: url("/ACM/img/Dsig.png");
	height: 20%;
}

#sig .pimg4 {
	background-image: url("/ACM/img/Wsig.png");
	height: 20%;
}

#sig .ptext {
	position: absolute;
	top: 40%;
	width: 50%;
	left: 7%;

	font-size: 1.2rem;
}

#sig .pimg0 .ptext {
	position: absolute;
	top: 30%;
	width: 80%;
	padding-left: 5%;
	text-align: center;
	font-size: 1.2rem;
}

#sig .pimg1 .ptext {
	position: absolute;
	top: 20%;
	width: 80%;
	padding-left: 5%;
	text-align: center;
	font-size: 1.2rem;
}

.head {
	background-color: #595959;
	color: #fff;
	padding: 20px;
	font-size: 20px;
	letter-spacing: 8px;
	text-transform: uppercase;
}

.pimg2 .head,
.pimg3 .head,
.pimg4 .head {
	position: absolute;
	top: 30%;
	padding-left: 5%;
}

@media (max-width: 568px) {
	.sigm img {
		width: 100%;
		height: fit-content;
	}

	.blog .card {
		width: 100%;
	}

	.blog .card-container {
		padding: 0;
	}

	.event .card {
		margin: auto;
	}
}

.blog .card {
	height: 450px;
	width: 350px;
	background: url("/ACM/img/pattern.jpg");
	background-size: cover;
	background-repeat: no-repeat;
}

.blog a {
	text-decoration: none;
}

.blog .blog1 {
	background: url("/ACM/img/DataSci.jpg");
	background-size: cover;
	background-repeat: no-repeat;
}

.blog .blog2 {
	background: url("/ACM/img/RamHack.jpg");
	background-size: cover;
	background-repeat: no-repeat;
}

.blog .blog3 {
	background: url("/ACM/img/ML.jpg");
	background-size: cover;
	background-repeat: no-repeat;
}

.blog .card .card-body {
	display: flex;
	flex-direction: column-reverse;
	color: rgba(0, 0, 0, 0.6);
	background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
}

.blog .card-container .card {
	transition: transform 0.2s ease;
	border: 0;
}

.blog .card-container:hover .card {
	-webkit-transform: scale(1.05);
	-ms-transform: scale(1.05);
	-moz-transform: scale(1.05);
	-o-transform: scale(1.05);
	transform: scale(1.05);
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.event .card {
	height: 450px;
	background-size: contain;
	background-repeat: no-repeat;
	transition: transform 0.2s ease;
}

.event .card:hover {
	-webkit-transform: scale(1.08);
	-ms-transform: scale(1.08);
	-moz-transform: scale(1.08);
	-o-transform: scale(1.08);
	transform: scale(1.08);
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/* Styling for Events card */

.event1 {
	background-image: url("/ACM/img/events/SIG_Intro.jpg");
}
.event2 {
	background-image: url("/ACM/img/events/Start.jpg");
}
.event3 {
	background-image: url("/ACM/img/events/FindFitFinish.jpg");
}

#members .card__title--cream {
	color: #e4e0c9;
}

